# rust-url-sortener

./: Cargo.toml  README.md  start.sh
data/: clicks.json  db.json
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs  styles.scss
src/: main.rs
src/model/: types.rs
src/routes/: functions.rs
src/storage/: functions.rs
