[package]
name = "rust-url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
parking_lot = "0.12"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros"] }
actix-limitation = "0.3"
env_logger = "0.9"
log = "0.4"
